--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "avia-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dashamogacheva.github.io/Avia-App/",
   "dependencies": {
     "@mui/icons-material": "^5.14.11",
     "@testing-library/jest-dom": "^5.17.0",
@@ -24,6 +25,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -48,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^5.2.2"
+    "gh-pages": "^6.1.1",
+    "typescript": "^4.9.5"
   }
 }
